# NeuroKit

./: .gitignore  GITHUB_PUBLISHING.md  LICENSE  PUBLISHING.md  README.md  __init__.py  convolution.py  dense.py  maxpool.py  optimizer.py  pyproject.toml  reshape.py  setup.py
.github/workflows/: auto-release.yml  publish-to-pypi.yml
