[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokit"
version = "0.1.1"
authors = [
  {name = "Horvath Bendeguz", email = "horvath.bobek@gmail.com"}
]
description = "A lightweight neural network library for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/Bendi71/NeuroKit"
"Bug Tracker" = "https://github.com/Bendi71/NeuroKit/issues"
